log
Thu 21 Mar 2024 01:52:19 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
4d3726e
Thu 21 Mar 2024 01:55:46 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:23: error: invalid use of incomplete typedef ‘List’
   61 |   for(int i = 0; i < L->size; i++){
      |                       ^~
exercises.c:62:22: error: invalid use of incomplete typedef ‘List’
   62 |     suma += *((int*)L->data[i]);
      |                      ^~
Compilation failed
4d3726e
Thu 21 Mar 2024 02:04:00 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
7b6569d
Thu 21 Mar 2024 02:31:37 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:8: error: unused variable ‘elemento’ [-Werror=unused-variable]
   79 |   int *elemento = (int*)first(L);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
311ea74
Thu 21 Mar 2024 02:31:49 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 20/70
ea7feaa
Thu 21 Mar 2024 02:33:12 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:24: error: invalid use of incomplete typedef ‘List’
   79 |   for (int i = 0; i < L->size;) {
      |                        ^~
exercises.c:80:30: error: invalid use of incomplete typedef ‘List’
   80 |       int* elemento = (int*)L->data[i];
      |                              ^~
Compilation failed
f6de08f
Thu 21 Mar 2024 02:35:54 AM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:18: error: comparison between pointer and integer [-Werror]
   80 |   while(elemento != NULL){
      |                  ^~
cc1: all warnings being treated as errors
Compilation failed
89222cf
Thu 21 Mar 2024 02:37:28 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   79 |   int* elemento = *(int*)first(L);
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
b0d4a18
Thu 21 Mar 2024 02:37:39 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af8deb8
Thu 21 Mar 2024 02:45:41 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
5e9d423
Thu 21 Mar 2024 02:54:25 AM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  3|2
total_score: 40/70
76badb5
Thu 21 Mar 2024 02:58:36 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
21ea812
Thu 21 Mar 2024 02:59:13 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
7bb14a1
Thu 21 Mar 2024 03:04:12 AM UTC: 
 exercises.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  3|2
total_score: 40/70
d50eb65
Thu 21 Mar 2024 03:05:05 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|2
total_score: 40/70
5be5ffe
Thu 21 Mar 2024 03:06:46 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
2df42d6
Thu 21 Mar 2024 03:07:37 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cefad2c
Thu 21 Mar 2024 03:09:31 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:107:18: error: expected ‘;’ before ‘pop’
  107 |     push(P1,dato)
      |                  ^
      |                  ;
  108 |     pop(Paux);
      |     ~~~           
Compilation failed
ee53195
Thu 21 Mar 2024 03:09:41 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
fdb3c06
Thu 21 Mar 2024 03:16:17 AM UTC: 
 exercises.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  6|1
total_score: 60/70
63337f5
